# sukkiri_ml

./: .gitignore  main.py  pyproject.toml
ex3/: main.py
iris/: iris.csv  main.py
