[project]
name = "sukkiri-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
